force-app/main/default/objects/User/listViews/THAAllUsers.listView-meta.xml
<ListView>
    <fullName>THAAllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>MANAGER</columns>
    <columns>GBU__c</columns>
    <columns>KNOWLEDGE_USER</columns>
    <columns>DELEGATED_APPROVER</columns>
    <columns>MOBILE_USER</columns>
    <filterScope>Everything</filterScope>
    <label>THA - All Users</label>
</ListView>